split tests into multiple files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(SmokeTests tests.cpp)
+add_executable(SmokeTests tests.cpp world_tests.cpp)
 target_link_libraries(SmokeTests GTest::gtest_main)
 
 include(GoogleTest)
