--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(SmokeTests tests.cpp world_tests.cpp)
-target_link_libraries(SmokeTests PRIVATE PongLib GTest::gtest_main gmock_main)
+add_executable(Tests tests.cpp world_tests.cpp)
+target_link_libraries(Tests PRIVATE PongLib GTest::gtest_main gmock_main)
 
 include(GoogleTest)
-gtest_discover_tests(SmokeTests)
+gtest_discover_tests(Tests)
