feat: implemented simple entity component system (#1)
* split tests into multiple files

* structure for ecs

* better interface

* register entity in world

* made linking work

* implemented registering new entities

* run all systems on components

* function for removing entities from world

* move fakes into own files for reuse

* better names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 include(FetchContent)
 
 cmake_minimum_required(VERSION 3.21)
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 project(Pong)
 add_subdirectory(src)
+add_subdirectory(lib)
 
 enable_testing()
 add_subdirectory(tests)
