--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,10 @@
-add_executable(Tests tests.cpp world_tests.cpp "test_doubles/fakes/fake_component.cpp" "test_doubles/fakes/fake_system.cpp")
+add_executable(Tests 
+tests.cpp 
+world_tests.cpp 
+entity_tests.cpp
+test_doubles/fakes/fake_component.cpp
+test_doubles/fakes/fake_system.cpp)
+
 target_link_libraries(Tests PRIVATE PongLib GTest::gtest_main gmock_main)
 
 include(GoogleTest)
