--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(PongLib STATIC
     world/world.cpp
     rendering/rendering.hpp
     rendering/rendering_system.cpp
-    rendering/texture.cpp)
+    rendering/texture.cpp "rendering/sprite.cpp")
 
 target_include_directories(PongLib PUBLIC .)
 target_link_libraries(PongLib PRIVATE SDL2::SDL2-static SDL2_image::SDL2_image-static)
