--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,8 @@ add_executable(Tests
 "world/world_tests.cpp" 
 "world/entity_tests.cpp"
 "world/test_doubles/fakes/fake_component.cpp"
-"world/test_doubles/fakes/fake_system.cpp" )
+"world/test_doubles/fakes/fake_system.cpp"
+"rendering/test_doubles/fakes/fake_texture.cpp")
 
 target_link_libraries(Tests PRIVATE PongLib GTest::gtest_main gmock_main)
 
