feat: rendering system (#3)
* system for rendering

* add Position component

* define interface for Sprite component

* reorganized tests

* raii wrapper for SDL_Texture

* sprite component

* wip: get system to run

* rendering system works

* consistent naming

* moved all texture stuff to texture.cpp

* moved getting texture size into texture class

* interface for texture

* fake texture for testing sprite

* test for single frame sprite

* fixed some warnings

* fix calculations for single sprites

* test make sure that sprite sheet loops back

* fixed some styling

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_library(PongLib STATIC
     world/world.hpp
     world/entity.cpp
-    world/world.cpp)
+    world/world.cpp
+    rendering/rendering.hpp
+    rendering/rendering_system.cpp
+    rendering/texture.cpp "rendering/sprite.cpp")
 
 target_include_directories(PongLib PUBLIC .)
+target_link_libraries(PongLib PRIVATE SDL2::SDL2-static SDL2_image::SDL2_image-static)
