--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ include(FetchContent)
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 17)
 project(Pong)
-add_subdirectory(src)
+add_subdirectory(app)
 add_subdirectory(lib)
 
 enable_testing()
