--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,4 +9,7 @@ if (WIN32)
     )
 endif()
 
-target_link_libraries(Pong PRIVATE PongLib SDL2::SDL2-static SDL2main SDL2_image::SDL2_image-static)
+target_link_libraries(Pong 
+	PRIVATE
+	PongLib 
+	SDL2_image::SDL2_image-static)
