--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,10 +15,18 @@ add_executable(Tests
 
 target_include_directories(Tests PRIVATE includes/)
 
+#googletest
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG v1.13.0
+        SYSTEM
+)
+FetchContent_MakeAvailable(googletest)
+
 target_link_libraries(Tests 
-	PRIVATE PongLib 
-	SDL2::SDL2-static 
-	SDL2_image::SDL2_image-static 
+	PRIVATE
+	PongLib 
 	GTest::gtest_main gmock_main
 )
 
