Moved all external dependencies to find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,16 +17,10 @@ target_link_libraries(PongLib PRIVATE SDL2::SDL2 SDL2::SDL2main)
 target_link_libraries(Tests PRIVATE SDL2::SDL2 SDL2::SDL2main)
 
 #SDL_Image
-FetchContent_Declare(
-        SDL_Image
-        GIT_REPOSITORY https://github.com/libsdl-org/SDL_image.git
-        GIT_TAG d3c6d5963dbe438bcae0e2b6f3d7cfea23d02829
-        SYSTEM
-)
-
+find_package(SDL2_image)
+target_link_libraries(PongLib PRIVATE SDL2_image::SDL2_image)
 set(SDL2IMAGE_INSTALL OFF)
 set(BUILD_SHARED_LIBS FALSE)
-FetchContent_MakeAvailable(SDL_Image)
 
 #Include assets in output
 add_custom_target(assets
