link targets in respective sub cmakelists

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,7 +9,11 @@ if (WIN32)
     )
 endif()
 
+find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2 SDL2main)
+
 target_link_libraries(Pong 
 	PRIVATE
 	PongLib 
+	SDL2::SDL2 
+	SDL2::SDL2main
 )
