--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,6 +15,8 @@ jobs:
           submodules: 'true'
       - name: Install CMake
         uses: lukka/get-cmake@v3.25.2
+      - name: Install Project Dependencies
+        run: sudo apt install -y gtest sdl2 sdl2-image
       - name: Create directory for build
         run: mkdir build
       - name: Create build files
