--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Run CMake
         uses: lukka/run-cmake@v10
         with: 
-          configurePreset: ninja-multi-vcpkg
-          buildPreset: ninja-multi-vcpkg
-          testPreset: ninja-multi-vcpkg
+          configurePreset: ubuntu-runner-config
+          buildPreset: ubuntu-runner-config
+          testPreset: ubuntu-runner-config
 
       
