--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -15,7 +15,7 @@ add_library(PongLib STATIC
     "src/physics/collision_eventprocessor.cpp"
     "src/physics/collision_system.cpp")
 
-find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2 SDL2main)
+find_package(SDL2 REQUIRED CONFIG)
 find_package(SDL2_image REQUIRED)
 
 target_include_directories(PongLib PUBLIC 
@@ -24,5 +24,5 @@ target_include_directories(PongLib PUBLIC
 target_link_libraries(PongLib 
 	PRIVATE
 	SDL2::SDL2
-    SDL2_image::SDL2_image
+  SDL2_image::SDL2_image
 )
