--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(Tests
 target_include_directories(Tests PRIVATE includes/)
 
 find_package(GTest REQUIRED)
-find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2 SDL2main)
+find_package(SDL2 REQUIRED CONFIG)
 
 target_link_libraries(Tests 
 	PRIVATE
