build: replace FetchContent with find_package (#8)
* use find package for SDL2

* Moved all external dependencies to find_package

* link targets in respective sub cmakelists

* removed windows stuff that is no longer needed

* Install dependencies in Github Workflow

* Use correct package names

* Fallback to pkgconfig if cmake config has not been found

* setup project to work with new workflow

* Fallback to pkgconfig not necessary anymore

* Accidentally removed linking SDL2_image; Added preset for Windows Dev

* use correct preset name

* wip: fix mess

* Follow the instructions to unf*ck your build

* Fix preset names in workflow

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,12 +1,11 @@
 add_executable(Pong 
     "src/main.cpp")
 
-if (WIN32)
-    add_custom_command(
-        TARGET Pong POST_BUILD
-        COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:SDL2::SDL2>" "$<TARGET_FILE_DIR:Pong>"
-        VERBATIM
-    )
-endif()
+find_package(SDL2 REQUIRED CONFIG)
 
-target_link_libraries(Pong PRIVATE PongLib SDL2::SDL2-static SDL2main SDL2_image::SDL2_image-static)
+target_link_libraries(Pong 
+	PRIVATE
+	PongLib 
+	$<TARGET_NAME_IF_EXISTS:SDL2::SDL2main>
+	$<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2::SDL2-static>
+)
