--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,17 +14,16 @@ jobs:
         with:
           submodules: 'true'
       - name: Install CMake
-        uses: lukka/get-cmake@v3.25.2
-      - name: Create directory for build
-        run: mkdir build
-      - name: Create build files
-        working-directory: ./build
-        run: cmake ..
-      - name: Build project
-        working-directory: ./build 
-        run: make
-      - name: Run tests
-        working-directory: ./build 
-        run: ctest
+        uses: lukka/get-cmake@v3.21.2
+      - name: Setup vcpkg for dependencies
+        uses: lukka/run-vcpkg@v11
+        with:
+          vcpkgGitCommitId: 53bef8994c541b6561884a8395ea35715ece75db 
+      - name: Run CMake
+        uses: lukka/run-cmake@v10
+        with: 
+          configurePreset: ubuntu-runner-config
+          buildPreset: ubuntu-runner-debug
+          testPreset: ubuntu-runner-test
 
       
