chore: run clang-tidy on pull request (#9)
* Run clang-tidy on pull request

* Test commit to check if clang-tidy gets actually ran

* pass clang-tidy as additional arg to CMake

* pass clang-tidy through preset



* run clang-tidy after build and test

* Run run-clang-tidy in build directory

* fix clang-tidy

* fix linter error

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: run-tests
+name: lint-build-test
 on:
   push:
     branches: [main]
@@ -6,7 +6,7 @@ on:
     branches: [main]
 
 jobs:
-  tests:
+  lint-build-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout project
@@ -19,11 +19,12 @@ jobs:
         uses: lukka/run-vcpkg@v11
         with:
           vcpkgGitCommitId: 53bef8994c541b6561884a8395ea35715ece75db 
-      - name: Run CMake
+      - name: Build and Test
         uses: lukka/run-cmake@v10
         with: 
           configurePreset: ubuntu-runner-config
           buildPreset: ubuntu-runner-debug
           testPreset: ubuntu-runner-test
-
-      
+      - name: Linter
+        working-directory: ./build/ubuntu-runner-config
+        run: run-clang-tidy
