--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Build Files/Dirs
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -12,3 +13,6 @@ _deps
 build
 out 
 .cache
+
+# Doxygen Output Dir
+docs
